tests/invalid/error_01.robot
// error_01: [SEMÁNTICO] Sensor no declarado
rutina main() {
    si proximidad < 10:
        ejecutar avanzar();
}
